[gd_scene load_steps=17 format=3 uid="uid://bjovpismu0try"]

[ext_resource type="Script" path="res://Scripts/Calls/call_manage.gd" id="1_eogxm"]
[ext_resource type="Texture2D" uid="uid://c8l3wyr8pycd4" path="res://Assets/UI/accept_icon.png" id="2_2ov5c"]
[ext_resource type="AudioStream" uid="uid://bacofhcubpdd3" path="res://Assets/Audio/Ringtones/John Pork Calling Sound Effect _ Soundboard Link ðŸ”½ðŸ”½.mp3" id="2_c2f3s"]
[ext_resource type="Texture2D" uid="uid://bmxahyi730i6a" path="res://Assets/UI/decline_icon.png" id="3_pn63b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8oeyt"]
bg_color = Color(0.176471, 0.176471, 0.176471, 0.811765)
shadow_color = Color(0, 0, 0, 0.415686)
shadow_size = 3
shadow_offset = Vector2(0, 5.845)

[sub_resource type="SystemFont" id="SystemFont_m8gcy"]
font_names = PackedStringArray("Papyrus")

[sub_resource type="SystemFont" id="SystemFont_drlfv"]
font_names = PackedStringArray("Arial")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqr3p"]
bg_color = Color(0.0156863, 0.694118, 0.317647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="SystemFont" id="SystemFont_h822t"]
font_names = PackedStringArray("Serif")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c2u3f"]
bg_color = Color(0.67451, 0.0117647, 0.0627451, 1)

[sub_resource type="Animation" id="Animation_g32uq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(720, 1280)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("sfx_ringtone:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_bwtuv"]
resource_name = "fadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(720, 1280)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_jjsrm"]
resource_name = "fadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(720, 1280)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("sfx_ringtone:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3mesl"]
resource_name = "init"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(720, 1280)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_6tuek"]
resource_name = "slideIn_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(720, 1280)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-720, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8fomc"]
_data = {
"RESET": SubResource("Animation_g32uq"),
"fadeIn": SubResource("Animation_bwtuv"),
"fadeOut": SubResource("Animation_jjsrm"),
"init": SubResource("Animation_3mesl"),
"slideIn_right": SubResource("Animation_6tuek")
}

[node name="CallManage" type="Control"]
modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 720.0
offset_bottom = 1280.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eogxm")

[node name="pfp" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.116
anchor_right = 1.003
anchor_bottom = 0.861
offset_top = -0.480011
offset_right = -0.160034
offset_bottom = -0.0799561
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="pnl_top" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 4.0
offset_bottom = 225.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8oeyt")

[node name="lbl_name" type="Label" parent="pnl_top"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -60.0
offset_right = 188.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_m8gcy")
theme_override_font_sizes/font_size = 64
text = "[CALLER]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_device" type="Label" parent="pnl_top"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -58.5
offset_top = -70.0
offset_right = 58.5
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = SubResource("SystemFont_drlfv")
theme_override_font_sizes/font_size = 40
text = "mobile"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pnl_bottom" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -225.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_8oeyt")

[node name="pnl_accept" type="Panel" parent="pnl_bottom"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -294.0
offset_top = -60.5
offset_right = -34.0
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pqr3p")

[node name="icon" type="TextureRect" parent="pnl_bottom/pnl_accept"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("2_2ov5c")
expand_mode = 1

[node name="lbl" type="Label" parent="pnl_bottom/pnl_accept"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -30.5
offset_right = -13.0
offset_bottom = 26.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = SubResource("SystemFont_h822t")
theme_override_font_sizes/font_size = 44
text = "Accept"
horizontal_alignment = 2

[node name="btn_accept" type="Button" parent="pnl_bottom/pnl_accept"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="acceptTXTBTN" type="TextureButton" parent="pnl_bottom/pnl_accept"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -64.0
offset_right = 128.0
offset_bottom = 64.0
grow_vertical = 2
texture_normal = ExtResource("2_2ov5c")
ignore_texture_size = true
stretch_mode = 0

[node name="pnl_decline" type="Panel" parent="pnl_bottom"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 36.0
offset_top = -60.5
offset_right = 296.0
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c2u3f")

[node name="icon" type="TextureRect" parent="pnl_bottom/pnl_decline"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("3_pn63b")
expand_mode = 1

[node name="lbl" type="Label" parent="pnl_bottom/pnl_decline"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -30.5
offset_right = -4.0
offset_bottom = 26.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = SubResource("SystemFont_h822t")
theme_override_font_sizes/font_size = 44
text = "Decline"
horizontal_alignment = 2

[node name="btn_decline" type="Button" parent="pnl_bottom/pnl_decline"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="btn_decline" type="TextureButton" parent="pnl_bottom"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 81.0
offset_top = -64.0
offset_right = 209.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
texture_normal = ExtResource("3_pn63b")
ignore_texture_size = true
stretch_mode = 0

[node name="sfx_ringtone" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_c2f3s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8fomc")
}
autoplay = "init"

[node name="muteTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="pressed" from="pnl_bottom/pnl_accept/btn_accept" to="." method="_on_btn_accept_pressed"]
[connection signal="timeout" from="muteTimer" to="." method="_on_mute_timer_timeout"]
